added spacing to selected-word

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -25,6 +25,10 @@ img{
     padding: 1%;
 }
 
+#selected-word{
+    letter-spacing: 5px;
+}
+
 body{
     background-image:url(../images/wild-west.jpg)
 }
