--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,7 +5,7 @@ img{
 .card{
     width: 30%;
     height: 50%;
-    margin-left:10%;
+    margin-left:35%;
     margin-top:10%;
     border: grey solid 2px;
     background-image:url(../images/paper.jpg)
@@ -30,7 +30,7 @@ img{
 }
 
 body{
-    background-image:url(../images/wild-west.jpg)
+    background-image:url(../images/wild-west2.jpg)
 }
 
 
